replace new operator with valueOf factory method (part II)