@@ -96,16 +96,16 @@ public class AlterJobDefinition extends ManipJobDefinition
 				stateSelection = null;
 				if (o == null || o instanceof Vector) {
 					rStateNames = (Vector) o;
-					stateSelection = new Integer(SDMSDependencyDefinition.FINAL);
+					stateSelection = Integer.valueOf(SDMSDependencyDefinition.FINAL);
 				} else {
 					rStateNames = null;
 					String stateMacro = (String) o;
 					if (stateMacro.equals(ParseStr.S_DEFAULT)) {
-						stateSelection = new Integer(SDMSDependencyDefinition.DEFAULT);
+						stateSelection = Integer.valueOf(SDMSDependencyDefinition.DEFAULT);
 					} else if (stateMacro.equals(ParseStr.S_UNREACHABLE)) {
-						stateSelection = new Integer(SDMSDependencyDefinition.UNREACHABLE);
+						stateSelection = Integer.valueOf(SDMSDependencyDefinition.UNREACHABLE);
 					} else if (stateMacro.equals(ParseStr.S_REACHABLE)) {
-						stateSelection = new Integer(SDMSDependencyDefinition.ALL_REACHABLE);
+						stateSelection = Integer.valueOf(SDMSDependencyDefinition.ALL_REACHABLE);
 					}
 				}
 				mode = (Integer) wh.get(ParseStr.S_MODE);
@@ -119,7 +119,7 @@ public class AlterJobDefinition extends ManipJobDefinition
 				expired = (WithHash) wh.get(ParseStr.S_EXPIRED);
 				if (expired != null) {
 					expiredAmount = (Integer) expired.get(ParseStr.S_MULT);
-					if(expiredAmount == null) expiredAmount = new Integer(1);
+					if(expiredAmount == null) expiredAmount = Integer.valueOf(1);
 					expiredBase = (Integer) expired.get(ParseStr.S_INTERVAL);
 				}
 
@@ -151,9 +151,9 @@ public class AlterJobDefinition extends ManipJobDefinition
 					}
 				}
 				if(idx >= act_deps.size()) {
-					if(unresolved == null) unresolved = new Integer(SDMSDependencyDefinition.ERROR);
+					if(unresolved == null) unresolved = Integer.valueOf(SDMSDependencyDefinition.ERROR);
 					dd = SDMSDependencyDefinitionTable.table.create(sysEnv, seId, rId, rdName, unresolved, mode, stateSelection, condition,
-					                resolveMode, expiredAmount, expiredBase, selectCondition);
+							resolveMode, expiredAmount, expiredBase, selectCondition);
 				}
 
 				if(wh.containsKey(ParseStr.S_STATUS)) {
@@ -291,7 +291,7 @@ public class AlterJobDefinition extends ManipJobDefinition
 				}
 
 				if(wh.containsKey(ParseStr.S_ENABLE))
-					isDisabled = new Boolean(!((Boolean) wh.get(ParseStr.S_ENABLE)).booleanValue());
+					isDisabled = Boolean.valueOf(!((Boolean) wh.get(ParseStr.S_ENABLE)).booleanValue());
 				else
 					isDisabled = null;
 
@@ -387,7 +387,7 @@ public class AlterJobDefinition extends ManipJobDefinition
 					if(isDisabled == null) {
 						isDisabled = Boolean.FALSE;
 					}
-					if(suspend == null) suspend = new Integer(SDMSSchedulingHierarchy.CHILDSUSPEND);
+					if(suspend == null) suspend = Integer.valueOf(SDMSSchedulingHierarchy.CHILDSUSPEND);
 					if (suspend.intValue() == SDMSSchedulingHierarchy.SUSPEND) {
 						Object resumeObj = wh.get(ParseStr.S_RESUME);
 						if (resumeObj != null) {
@@ -399,13 +399,13 @@ public class AlterJobDefinition extends ManipJobDefinition
 							}
 						}
 					}
-					if(mergeMode == null) mergeMode = new Integer(SDMSSchedulingHierarchy.NOMERGE);
+					if(mergeMode == null) mergeMode = Integer.valueOf(SDMSSchedulingHierarchy.NOMERGE);
 					if(prio != null) {
 						if(prio.intValue() > SchedulingThread.MIN_PRIORITY)
-							prio = new Integer(SchedulingThread.MIN_PRIORITY);
+							prio = Integer.valueOf(SchedulingThread.MIN_PRIORITY);
 						if(prio.intValue() < - SchedulingThread.MIN_PRIORITY)
-							prio = new Integer(- SchedulingThread.MAX_PRIORITY);
-					} else prio = new Integer(0);
+							prio = Integer.valueOf(- SchedulingThread.MAX_PRIORITY);
+					} else prio = Integer.valueOf(0);
 
 					estpId = null;
 					if(estpName != null) {
@@ -507,8 +507,8 @@ public class AlterJobDefinition extends ManipJobDefinition
 				String pdef = (String) pv.get(1);
 				Boolean isLocal = (Boolean) pv.get(2);
 				String exportName = (String) pv.get(3);
-				Integer type = (pt == null ? new Integer(SDMSParameterDefinition.PARAMETER) : (Integer) pt.key);
-				Integer aggFunction = new Integer(SDMSParameterDefinition.NONE);
+				Integer type = (pt == null ? Integer.valueOf(SDMSParameterDefinition.PARAMETER) : (Integer) pt.key);
+				Integer aggFunction = Integer.valueOf(SDMSParameterDefinition.NONE);
 				Long linkPdId = null;
 				switch(type.intValue()) {
 					case SDMSParameterDefinition.PARAMETER:
@@ -686,7 +686,7 @@ public class AlterJobDefinition extends ManipJobDefinition
 						if(wh.containsKey(ParseStr.S_EXPIRED)) {
 							if(expired != null) {
 								exp_mult = (Integer) expired.get(ParseStr.S_MULT);
-								if(exp_mult == null) exp_mult = new Integer(1);
+								if(exp_mult == null) exp_mult = Integer.valueOf(1);
 								exp_interval = (Integer) expired.get(ParseStr.S_INTERVAL);
 								ignoreOnRerun = (Boolean) expired.get(ParseStr.S_IGNORE);
 							} else {
@@ -703,14 +703,14 @@ public class AlterJobDefinition extends ManipJobDefinition
 					}
 				}
 				if(idx >= act_resrc.size()) {
-					if(amount == null)	amount = new Integer(0);
-					if(lockmode == null)	lockmode = new Integer(SDMSResourceRequirement.N);
+					if(amount == null)	amount = Integer.valueOf(0);
+					if(lockmode == null)	lockmode = Integer.valueOf(SDMSResourceRequirement.N);
 					if(rsmpname == null) {
 						rsmpId = null;
 					} else {
 						rsmpId = SDMSResourceStateMappingProfileTable.idx_name_getUnique(sysEnv, rsmpname).getId(sysEnv);
 					}
-					if(keepMode == null)	keepMode = new Integer(SDMSResourceRequirement.NOKEEP);
+					if(keepMode == null)	keepMode = Integer.valueOf(SDMSResourceRequirement.NOKEEP);
 					if(sticky == null) {
 						isSticky = Boolean.FALSE;
 						stickyName = null;
@@ -739,7 +739,7 @@ public class AlterJobDefinition extends ManipJobDefinition
 						ignoreOnRerun = Boolean.FALSE;
 					} else {
 						exp_mult = (Integer) expired.get(ParseStr.S_MULT);
-						if(exp_mult == null) exp_mult = new Integer(1);
+						if(exp_mult == null) exp_mult = Integer.valueOf(1);
 						exp_interval = (Integer) expired.get(ParseStr.S_INTERVAL);
 						ignoreOnRerun = (Boolean) expired.get(ParseStr.S_IGNORE);
 					}
@@ -939,7 +939,7 @@ public class AlterJobDefinition extends ManipJobDefinition
 
 		if (withs.containsKey(ParseStr.S_INHERIT)) {
 			inheritPrivs = (Long) withs.get(ParseStr.S_INHERIT);
-			if (inheritPrivs == null) inheritPrivs = new Long(0);
+			if (inheritPrivs == null) inheritPrivs = Long.valueOf(0);
 			long lpriv = inheritPrivs.longValue();
 			if((se.getPrivilegeMask() & lpriv) != lpriv) {
 				throw new CommonErrorException(new SDMSMessage(sysEnv, "03202061132", "Incompatible grant"));
