@@ -40,7 +40,7 @@ public class AlterSession extends Node
 
 	public final static String __version = "@(#) $Id: AlterSession.java,v 2.6.2.1 2013/03/14 10:24:23 ronald Exp $";
 
-	private final static Long zero = new Long(0);
+	private final static Long zero = Long.valueOf(0);
 	private Integer sid;
 	private String userName;
 	private String baseUser;
@@ -127,7 +127,7 @@ public class AlterSession extends Node
 
 		boolean aIsAdmin = sysEnv.cEnv.gid().contains(SDMSObject.adminGId);
 		boolean bIsAdmin = false;
-		aId = new Long(sysEnv.cEnv.uid());
+		aId = Long.valueOf(sysEnv.cEnv.uid());
 		bId = b.getId(sysEnv);
 		cId = c.getId(sysEnv);
 
@@ -146,7 +146,7 @@ public class AlterSession extends Node
 					if (!SDMSUserEquivTable.idx_uId_altUId.containsKey(sysEnv, new SDMSKey(aId, cId)))
 						throw new AccessViolationException(new SDMSMessage(sysEnv, "03708011035", "Insufficient privileges"));
 				}
-		}
+			}
 		}
 
 		sysEnv.cEnv.setConnectedUser(sysEnv, cId, SDMSMemberTable.idx_uId.getVector(sysEnv, cId));
@@ -170,7 +170,7 @@ public class AlterSession extends Node
 		list = new SDMSThread[tg.activeCount()];
 		nt = tg.enumerate(list);
 
-		if(sid == null) sid = new Integer(env.id());
+		if(sid == null) sid = Integer.valueOf(env.id());
 		searchedId = sid.intValue();
 
 		for(i=0; i<nt; i++) {
@@ -224,7 +224,7 @@ public class AlterSession extends Node
 				result.setFeedback(new SDMSMessage(sysEnv, "03707141428", "Session unchanged"));
 		} else {
 			alterSession(sysEnv);
-		result.setFeedback(new SDMSMessage(sysEnv, "03203182357", "Session altered"));
+			result.setFeedback(new SDMSMessage(sysEnv, "03203182357", "Session altered"));
 		}
 	}
 
