@@ -23,8 +23,6 @@ GNU Affero General Public License for more details.
 You should have received a copy of the GNU Affero General Public License
 along with this program. If not, see <http://www.gnu.org/licenses/>.
 */
-
-
 package de.independit.scheduler.server.parser;
 
 import java.io.*;
@@ -79,7 +77,7 @@ public class CreateNamedResource extends Node
 		if(gName == null) gName = (String) with.get(ParseStr.S_GROUP_CASCADE);
 
 		if(gName != null) {
-			gId = SDMSGroupTable.idx_name_deleteVersion_getUnique(sysEnv, new SDMSKey (gName, new Long(0))).getId(sysEnv);
+			gId = SDMSGroupTable.idx_name_deleteVersion_getUnique(sysEnv, new SDMSKey (gName, Long.valueOf(0))).getId(sysEnv);
 		} else {
 			gId = SDMSUserTable.getObject(sysEnv, sysEnv.cEnv.uid()).getDefaultGId(sysEnv);
 		}
@@ -96,11 +94,11 @@ public class CreateNamedResource extends Node
 		if (u == SDMSNamedResource.STATIC || u == SDMSNamedResource.CATEGORY || u == SDMSNamedResource.STATIC)
 			factor = null;
 		else if (factor == null)
-			factor = new Float(1.0);
+			factor = Float.valueOf(1.0f);
 
 		if (with.containsKey(ParseStr.S_INHERIT)) {
 			inheritPrivs = (Long) with.get(ParseStr.S_INHERIT);
-			if (inheritPrivs == null) inheritPrivs = new Long(0);
+			if (inheritPrivs == null) inheritPrivs = Long.valueOf(0);
 		} else
 			inheritPrivs = null;
 	}
@@ -117,7 +115,7 @@ public class CreateNamedResource extends Node
 
 		if(iu == SDMSNamedResource.POOL)
 			sysEnv.checkFeatureAvailability(SystemEnvironment.S_RESOURCE_POOLS);
-		if(factor != null && !(factor.equals(new Float(1.0))))
+		if(factor != null && !(factor.equals(Float.valueOf(1.0f))))
 			sysEnv.checkFeatureAvailability(SystemEnvironment.S_RESOURCE_TRACING);
 
 		if(rspName != null) {
@@ -128,7 +126,6 @@ public class CreateNamedResource extends Node
 		}
 		name = (String) path.remove(path.size() - 1);
 		if (path.size() == 0) {
-
 			throw new CommonErrorException(new SDMSMessage(sysEnv, "03202061335", "The category RESOURCE cannot be created"));
 		}
 
@@ -139,15 +136,14 @@ public class CreateNamedResource extends Node
 		if((n.getPrivilegeMask() & lpriv) != lpriv) {
 			throw new CommonErrorException(new SDMSMessage(sysEnv, "03202061331", "Incompatible grant"));
 		}
-
-		inheritPrivs = new Long(lpriv);
+		inheritPrivs = Long.valueOf(lpriv);
 
 		try {
 			n = SDMSNamedResourceTable.table.create(sysEnv, name, gId, parentId, usage, rsp_id, factor, inheritPrivs);
 		} catch(DuplicateKeyException dke) {
 			if(replace) {
 				path.add(name);
-				AlterNamedResource anr = new AlterNamedResource(new ObjectURL(new Integer(Parser.NAMED_RESOURCE), path), with, Boolean.FALSE);
+				AlterNamedResource anr = new AlterNamedResource(new ObjectURL(Integer.valueOf(Parser.NAMED_RESOURCE), path), with, Boolean.FALSE);
 				anr.setEnv(env);
 				anr.go(sysEnv);
 				result = anr.result;
