@@ -39,7 +39,7 @@ public class CreateResource extends ManipResource
 
 	public final static String __version = "@(#) $Id: CreateResource.java,v 2.14.4.5 2013/03/26 11:59:17 ronald Exp $";
 
-	static final Float fzero = new Float(0);
+	static final Float fzero = Float.valueOf(0);
 
 	private WithHash with;
 	private boolean replace;
@@ -84,7 +84,7 @@ public class CreateResource extends ManipResource
 		parms = (WithHash) with.get(ParseStr.S_PARAMETERS);
 
 		if(groupname != null) {
-			g = SDMSGroupTable.idx_name_deleteVersion_getUnique(sysEnv, new SDMSKey(groupname, new Long(0)));
+			g = SDMSGroupTable.idx_name_deleteVersion_getUnique(sysEnv, new SDMSKey(groupname, Long.valueOf(0)));
 			gId = g.getId(sysEnv);
 		} else {
 			u = SDMSUserTable.getObject(sysEnv, sysEnv.cEnv.uid());
@@ -115,7 +115,7 @@ public class CreateResource extends ManipResource
 			}
 		}
 
-		if (baseMultiplier == null) baseMultiplier = new Integer(10 * 60);
+		if (baseMultiplier == null) baseMultiplier = Integer.valueOf(10 * 60);
 
 		if(replace) {
 			SDMSKey k = new SDMSKey(nrId, sId);
@@ -142,7 +142,7 @@ public class CreateResource extends ManipResource
 		}
 
 		if ((requestableAmount == null) && (amount == null)) {
-			requestableAmount = new Integer(-1);
+			requestableAmount = Integer.valueOf(-1);
 		}
 		if(requestableAmount == null) {
 			requestableAmount = amount;
@@ -153,7 +153,7 @@ public class CreateResource extends ManipResource
 		rsdId = check_resource(sysEnv, nr, rsdId, requestableAmount, amount, scopeResource);
 
 		Date dts = new Date();
-		Long ts = new Long (dts.getTime());
+		Long ts = Long.valueOf (dts.getTime());
 
 		if (requestableAmount.intValue() == -1) {
 			requestableAmount = null;
@@ -168,7 +168,7 @@ public class CreateResource extends ManipResource
 		} else {
 			r = SDMSResourceTable.table.create(sysEnv, nrId, sId, null,  gId, null, null, null, rsdId, ts, amount, requestableAmount,
 			                                   amount, amount, online, factor, traceInterval, traceBase, baseMultiplier,
-			                                   fzero, fzero, fzero, fzero, new Long(0), new Long(0));
+			                                   fzero, fzero, fzero, fzero, Long.valueOf(0), Long.valueOf(0));
 			r.createVariables(sysEnv, parms);
 
 			SystemEnvironment.sched.notifyChange(sysEnv, r, sId, SchedulingThread.CREATE);
