@@ -23,8 +23,6 @@ GNU Affero General Public License for more details.
 You should have received a copy of the GNU Affero General Public License
 along with this program. If not, see <http://www.gnu.org/licenses/>.
 */
-
-
 package de.independit.scheduler.server.parser;
 
 import java.io.*;
@@ -79,7 +77,7 @@ public class ListResourceStatus extends Node
 
 		result.setFeedback(
 			new SDMSMessage(sysEnv, "03201100047", "$1 Resource State Definition(s) found",
-					new Integer(d_container.lines)));
+					Integer.valueOf(d_container.lines)));
 
 	}
 
