@@ -211,7 +211,7 @@ public abstract class ManipJobDefinition extends Node
 		gName = (String) withs.get(ParseStr.S_GROUP);
 		if(gName != null) {
 			gId = SDMSGroupTable.idx_name_deleteVersion_getUnique(
-					sysEnv, new SDMSKey(gName, new Long(0))).getId(sysEnv);
+					sysEnv, new SDMSKey(gName, Long.valueOf(0))).getId(sysEnv);
 			ChownChecker.check(sysEnv, gId);
 		} else {
 			final SDMSUser u = SDMSUserTable.getObject(sysEnv, env.uid());
@@ -220,11 +220,11 @@ public abstract class ManipJobDefinition extends Node
 
 		if (withs.containsKey(ParseStr.S_INHERIT)) {
 			inheritPrivs = (Long) withs.get(ParseStr.S_INHERIT);
-			if (inheritPrivs == null) inheritPrivs = new Long(0);
+			if (inheritPrivs == null) inheritPrivs = Long.valueOf(0);
 		} else
-			inheritPrivs = new Long(0);
+			inheritPrivs = Long.valueOf(0);
 		long lpriv = inheritPrivs.longValue();
-		inheritPrivs = new Long(lpriv);
+		inheritPrivs = Long.valueOf(lpriv);
 	}
 
 	protected void checkJob(SystemEnvironment sysEnv)
@@ -238,29 +238,29 @@ public abstract class ManipJobDefinition extends Node
 		if(errlogfile == null)  truncErrlog = null;
 		if(priority != null) {
 			if(priority.intValue() > SchedulingThread.MIN_PRIORITY) {
-				priority = new Integer(SchedulingThread.MIN_PRIORITY);
+				priority = Integer.valueOf(SchedulingThread.MIN_PRIORITY);
 				priowarn = true;
 			}
 			if(priority.intValue() < SchedulingThread.MAX_PRIORITY) {
-				priority = new Integer(SchedulingThread.MAX_PRIORITY);
+				priority = Integer.valueOf(SchedulingThread.MAX_PRIORITY);
 				priowarn = true;
 			}
 			if(priority.intValue() < SystemEnvironment.priorityLowerBound && !sysEnv.cEnv.gid().contains(SDMSObject.adminGId)) {
-				priority = new Integer(SystemEnvironment.priorityLowerBound);
+				priority = Integer.valueOf(SystemEnvironment.priorityLowerBound);
 				priowarn = true;
 			}
-		} else  priority = new Integer(SchedulingThread.DEFAULT_PRIORITY);
+		} else  priority = Integer.valueOf(SchedulingThread.DEFAULT_PRIORITY);
 		if(minPriority != null) {
 			if(minPriority.intValue() > SchedulingThread.MIN_PRIORITY) {
-				minPriority = new Integer(SchedulingThread.MIN_PRIORITY);
+				minPriority = Integer.valueOf(SchedulingThread.MIN_PRIORITY);
 				priowarn = true;
 			}
 			if(minPriority.intValue() < SchedulingThread.MAX_PRIORITY) {
-				minPriority = new Integer(SchedulingThread.MAX_PRIORITY);
+				minPriority = Integer.valueOf(SchedulingThread.MAX_PRIORITY);
 				priowarn = true;
 			}
 			if(minPriority.intValue() < SystemEnvironment.priorityLowerBound && !sysEnv.cEnv.gid().contains(SDMSObject.adminGId)) {
-				priority = new Integer(SystemEnvironment.priorityLowerBound);
+				priority = Integer.valueOf(SystemEnvironment.priorityLowerBound);
 				priowarn = true;
 			}
 		}
@@ -273,7 +273,7 @@ public abstract class ManipJobDefinition extends Node
 		}
 
 		if(masterSubmittable == null) masterSubmittable = Boolean.FALSE;
-		if(dependencyOperation == null) dependencyOperation = new Integer (SDMSSchedulingEntity.AND);
+		if(dependencyOperation == null) dependencyOperation = Integer.valueOf (SDMSSchedulingEntity.AND);
 		if(esp == null) {
 			throw new CommonErrorException(
 				new SDMSMessage(sysEnv, "02112140955",
@@ -308,7 +308,7 @@ public abstract class ManipJobDefinition extends Node
 
 		if(timeout != null) {
 			to_mult = (Integer) timeout.get(ParseStr.S_MULT);
-			if(to_mult == null) to_mult = new Integer(1);
+			if(to_mult == null) to_mult = Integer.valueOf(1);
 			to_interval = (Integer) timeout.get(ParseStr.S_INTERVAL);
 			to_state = (String) timeout.get(ParseStr.S_STATUS);
 			to_esdId = SDMSExitStateDefinitionTable.idx_name_getUnique(sysEnv, to_state).getId(sysEnv);
@@ -371,17 +371,17 @@ public abstract class ManipJobDefinition extends Node
 		truncLog = null;
 		truncErrlog = null;
 		if(masterSubmittable == null) masterSubmittable = Boolean.FALSE;
-		if(dependencyOperation == null) dependencyOperation = new Integer (SDMSSchedulingEntity.AND);
+		if(dependencyOperation == null) dependencyOperation = Integer.valueOf (SDMSSchedulingEntity.AND);
 		if(priority != null) {
 			if(priority.intValue() > SchedulingThread.MIN_PRIORITY) {
-				priority = new Integer(SchedulingThread.MIN_PRIORITY);
+				priority = Integer.valueOf(SchedulingThread.MIN_PRIORITY);
 				priowarn = true;
 			}
 			if(priority.intValue() < -SchedulingThread.MIN_PRIORITY) {
-				priority = new Integer(-SchedulingThread.MIN_PRIORITY);
+				priority = Integer.valueOf(-SchedulingThread.MIN_PRIORITY);
 				priowarn = true;
 			}
-		} else  priority = new Integer(0);
+		} else  priority = Integer.valueOf(0);
 		minPriority = null;
 		if(submitSuspended == null) submitSuspended = Boolean.FALSE;
 		if(esp == null) {
@@ -533,13 +533,13 @@ public abstract class ManipJobDefinition extends Node
 		prio = (Integer) wh.get(ParseStr.S_PRIORITY);
 		if(prio != null) {
 			if(prio.intValue() > SchedulingThread.MIN_PRIORITY)
-				prio = new Integer(SchedulingThread.MIN_PRIORITY);
+				prio = Integer.valueOf(SchedulingThread.MIN_PRIORITY);
 			if(prio.intValue() < - SchedulingThread.MIN_PRIORITY)
-				prio = new Integer(- SchedulingThread.MAX_PRIORITY);
-		} else prio = new Integer(0);
+				prio = Integer.valueOf(- SchedulingThread.MAX_PRIORITY);
+		} else prio = Integer.valueOf(0);
 
 		suspend = (Integer) wh.get(ParseStr.S_SUSPEND);
-		if(suspend == null) suspend = new Integer(SDMSSchedulingHierarchy.CHILDSUSPEND);
+		if(suspend == null) suspend = Integer.valueOf(SDMSSchedulingHierarchy.CHILDSUSPEND);
 		shResumeAt = null;
 		shResumeIn = null;
 		shResumeBase = null;
@@ -557,7 +557,7 @@ public abstract class ManipJobDefinition extends Node
 		}
 
 		mergeMode = (Integer) wh.get(ParseStr.S_MERGE_MODE);
-		if(mergeMode == null) mergeMode = new Integer(SDMSSchedulingHierarchy.NOMERGE);
+		if(mergeMode == null) mergeMode = Integer.valueOf(SDMSSchedulingHierarchy.NOMERGE);
 
 		estpName = (String) wh.get(ParseStr.S_TRANSLATION);
 		intName = (String) wh.get(ParseStr.S_INTERVAL);
@@ -727,8 +727,8 @@ public abstract class ManipJobDefinition extends Node
 			String pdef = (String) pv.get(1);
 			Boolean isLocal = (Boolean) pv.get(2);
 			String exportName = (String) pv.get(3);
-			Integer type = (pt == null ? new Integer(SDMSParameterDefinition.PARAMETER) : (Integer) pt.key);
-			Integer aggFunction = new Integer(SDMSParameterDefinition.NONE);
+			Integer type = (pt == null ? Integer.valueOf(SDMSParameterDefinition.PARAMETER) : (Integer) pt.key);
+			Integer aggFunction = Integer.valueOf(SDMSParameterDefinition.NONE);
 			Long linkPdId = null;
 			switch(type.intValue()) {
 				case SDMSParameterDefinition.PARAMETER:
@@ -846,11 +846,11 @@ public abstract class ManipJobDefinition extends Node
 		nr = SDMSNamedResourceTable.getNamedResource(sysEnv, name);
 		Long nrId = nr.getId(sysEnv);
 
-		if(amount == null) amount = new Integer(0);
-		if(lockmode == null) lockmode = new Integer(SDMSResourceRequirement.N);
+		if(amount == null) amount = Integer.valueOf(0);
+		if(lockmode == null) lockmode = Integer.valueOf(SDMSResourceRequirement.N);
 		if(rsmpname != null)	rsmpId = SDMSResourceStateMappingProfileTable.idx_name_getUnique(sysEnv, rsmpname).getId(sysEnv);
 		else 			rsmpId = null;
-		if(keepMode == null) keepMode = new Integer(SDMSResourceRequirement.NOKEEP);
+		if(keepMode == null) keepMode = Integer.valueOf(SDMSResourceRequirement.NOKEEP);
 		if(sticky != null) {
 
 			isSticky = Boolean.TRUE;
@@ -876,7 +876,7 @@ public abstract class ManipJobDefinition extends Node
 
 		if(expired != null) {
 			exp_mult = (Integer) expired.get(ParseStr.S_MULT);
-			if(exp_mult == null) exp_mult = new Integer(1);
+			if(exp_mult == null) exp_mult = Integer.valueOf(1);
 			exp_interval = (Integer) expired.get(ParseStr.S_INTERVAL);
 			ignoreOnRerun = (Boolean) expired.get(ParseStr.S_IGNORE);
 		} else {
@@ -999,7 +999,7 @@ public abstract class ManipJobDefinition extends Node
 
 		unresolved = (Integer) wh.get(ParseStr.S_UNRESOLVED);
 		if (unresolved == null) {
-			unresolved = new Integer(SDMSDependencyDefinition.ERROR);
+			unresolved = Integer.valueOf(SDMSDependencyDefinition.ERROR);
 		}
 
 		Object o = wh.get(ParseStr.S_STATUS);
@@ -1015,16 +1015,16 @@ public abstract class ManipJobDefinition extends Node
 					sns.add ((String) ((WithItem) i.next()).key);
 				}
 			}
-			stateSelection = new Integer(SDMSDependencyDefinition.FINAL);
+			stateSelection = Integer.valueOf(SDMSDependencyDefinition.FINAL);
 		} else {
 			rStateNames = null;
 			String stateMacro = (String) o;
 			if (stateMacro.equals(ParseStr.S_DEFAULT)) {
-				stateSelection = new Integer(SDMSDependencyDefinition.DEFAULT);
+				stateSelection = Integer.valueOf(SDMSDependencyDefinition.DEFAULT);
 			} else if (stateMacro.equals(ParseStr.S_UNREACHABLE)) {
-				stateSelection = new Integer(SDMSDependencyDefinition.UNREACHABLE);
+				stateSelection = Integer.valueOf(SDMSDependencyDefinition.UNREACHABLE);
 			} else if (stateMacro.equals(ParseStr.S_REACHABLE)) {
-				stateSelection = new Integer(SDMSDependencyDefinition.ALL_REACHABLE);
+				stateSelection = Integer.valueOf(SDMSDependencyDefinition.ALL_REACHABLE);
 			}
 		}
 
@@ -1032,7 +1032,7 @@ public abstract class ManipJobDefinition extends Node
 		Long rId = rSe.getId(sysEnv);
 
 		mode = (Integer) wh.get(ParseStr.S_MODE);
-		if(mode == null) mode = new Integer(SDMSDependencyDefinition.ALL_FINAL);
+		if(mode == null) mode = Integer.valueOf(SDMSDependencyDefinition.ALL_FINAL);
 
 		resolveMode = (Integer) wh.get(ParseStr.S_RESOLVE);
 		if (resolveMode == null) resolveMode = SDMSDependencyDefinition.INTERNAL;
@@ -1042,7 +1042,7 @@ public abstract class ManipJobDefinition extends Node
 		expired = (WithHash) wh.get(ParseStr.S_EXPIRED);
 		if (expired != null) {
 			expiredAmount = (Integer) expired.get(ParseStr.S_MULT);
-			if(expiredAmount == null) expiredAmount = new Integer(1);
+			if(expiredAmount == null) expiredAmount = Integer.valueOf(1);
 			expiredBase = (Integer) expired.get(ParseStr.S_INTERVAL);
 		}
 
@@ -1058,11 +1058,11 @@ public abstract class ManipJobDefinition extends Node
 						unresolved,
 						mode,
 						stateSelection,
-				                condition,
-				                resolveMode,
-				                expiredAmount,
-				                expiredBase,
-				                selectCondition
+						condition,
+						resolveMode,
+						expiredAmount,
+						expiredBase,
+						selectCondition
 				);
 			} catch (DuplicateKeyException dke) {
 				if(processError) {
