@@ -23,8 +23,6 @@ GNU Affero General Public License for more details.
 You should have received a copy of the GNU Affero General Public License
 along with this program. If not, see <http://www.gnu.org/licenses/>.
 */
-
-
 package de.independit.scheduler.server.parser;
 
 import java.io.*;
@@ -41,7 +39,7 @@ public class ShowGroup extends ShowCommented
 
 	public final static String __version = "@(#) $Id: ShowGroup.java,v 2.9.4.2 2013/06/18 09:49:36 ronald Exp $";
 
-	private final static Long ZERO = new Long(0L);
+	private final static Long ZERO = Long.valueOf(0L);
 	private final static String USR = "user";
 	private final static String GRP = "group";
 	private final static String ESD = "exit state definition";
@@ -83,7 +81,6 @@ public class ShowGroup extends ShowCommented
 		Long gId = g.getId(sysEnv);
 
 		desc.add("ID");
-
 		desc.add("NAME");
 		desc.add("COMMENTTYPE");
 		desc.add("COMMENT");
@@ -92,9 +89,7 @@ public class ShowGroup extends ShowCommented
 		desc.add("CHANGER");
 		desc.add("CHANGE_TIME");
 		desc.add("PRIVS");
-
 		desc.add("MANAGE_PRIVS");
-
 		desc.add("USERS");
 
 		Vector data = new Vector();
@@ -137,14 +132,10 @@ public class ShowGroup extends ShowCommented
 		SDMSOutputContainer d_container = null;
 
 		Vector desc = new Vector();
-
 		desc.add("ID");
-
 		desc.add("UID");
 		desc.add("NAME");
-
 		desc.add("IS_ENABLED");
-
 		desc.add("DEFAULT_GROUP");
 		desc.add("PRIVS");
 
@@ -156,7 +147,6 @@ public class ShowGroup extends ShowCommented
 			SDMSUser u = SDMSUserTable.getObject(sysEnv, m.getUId(sysEnv));
 			if (u.getName(sysEnv).equals(SDMSUser.NOBODY)) continue;
 			Vector data = new Vector();
-
 			data.add(m.getId(sysEnv));
 			data.add(u.getId(sysEnv));
 			data.add(u.getName(sysEnv));
@@ -177,17 +167,15 @@ public class ShowGroup extends ShowCommented
 		SDMSOutputContainer dc = null;
 
 		Vector desc = new Vector(2);
-
 		desc.add("PRIVS");
 
 		dc = new SDMSOutputContainer(sysEnv, "MANAGE_PRIVS", desc);
 
 		SDMSPrivilege p = new SDMSPrivilege();
 		try {
-			SDMSGrant gr = SDMSGrantTable.idx_objectId_gId_getUnique(sysEnv, new SDMSKey(ZERO , gId));
+			SDMSGrant gr = SDMSGrantTable.idx_objectId_gId_getUnique(sysEnv, new SDMSKey(ZERO, gId));
 			p.addPriv(sysEnv, gr.getPrivs(sysEnv).longValue());
 		} catch (NotFoundException nfe) {
-
 		}
 		long pr = p.toLong().longValue();
 		if ((SDMSPrivilege.MANAGE_ALL & pr) != SDMSPrivilege.NOPRIVS) {
